[package]
name = "amunchain"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []
production = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
hex = "0.4.3"
bs58 = "0.5.1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
futures = "0.3"
axum = "0.7.5"
prometheus = "0.13.4"

bincode = "1.3.3"

ring = "0.17.8"
subtle = "2.6.1"
zeroize = { version = "1.8.1", features = ["derive"] }

sled = "0.34.7"

libp2p = { version = "0.53.2", default-features = false, features = [
  "tokio",
  "tcp",
  "noise",
  "yamux",
  "gossipsub",
  "identify",
  "ping",
  "dns",
  "macros",
] }

# Optional EVM dependency (wired later)
revm = { version = "7.0.0", default-features = false, features = ["std"] }

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.10.1"

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = "1.0.7"
