[package]
name = "amunchain-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3.2", features = ["derive"] }

[dependencies.amunchain]
path = ".."

[[bin]]
name = "consensus_frame"
path = "fuzz_targets/consensus_frame.rs"
test = false
doc = false

[[bin]]
name = "fuzz_codec_consensusmsg"
path = "fuzz_targets/fuzz_codec_consensusmsg.rs"
test = false
doc = false

[[bin]]
name = "fuzz_state_merkle_proof"
path = "fuzz_targets/fuzz_state_merkle_proof.rs"
test = false
doc = false

[[bin]]
name = "fuzz_peer_registry_parse"
path = "fuzz_targets/fuzz_peer_registry_parse.rs"
test = false
doc = false
